fixed ckeditor align center problem

--- a/bootstrappagegenerator/css/layoutit.css
+++ b/bootstrappagegenerator/css/layoutit.css
@@ -196,5 +196,4 @@ body.devpreview { margin-left:0px;}
 #download-layout { display: none }
 #editorModal textarea,
 #downloadModal textarea { width:100%;height:280px;resize: none;-moz-box-sizing: border-box;-webkit-box-sizing: border-box;box-sizing: border-box; }
-#editorModal {width:640px;}
 a.language-selected { font-style: italic; font-weight: bold; }
